# GSoC2013_CGAL_code_sample

./: README.md
Meshes_plot/: .plot_knot1.cpp.swp  .triangle_strip.cpp.swo  .triangle_strip.cpp.swp  Makefile~  plot_heart.cpp  plot_knot1.cpp  plot_sphere.cpp  plot_tetrahedron_3.cpp  plot_triangle_2.cpp
benchmark/Generator/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  benchmark_discrete_distrib  cmake_install.cmake  mesh-3D-sampling-test  mesh-3D-sampling-test-improved  mesh-3D-sampling-test.cpp  out.mesh  points_in_3D_mesh  surface_mesh_sampling_test  triangle_3_test
benchmark/Mesh_3/: .generate_mesh_3_sphere.cpp.swm  .generate_mesh_3_sphere.cpp.swn  .generate_mesh_3_sphere.cpp.swo  .generate_mesh_3_sphere.cpp.swp  generate_mesh_3_klein.cpp  generate_mesh_3_knot1.cpp  generate_mesh_3_sphere.cpp  generate_mesh_3_sphere.cpp~  generate_mesh_3_torus.cpp  implicit_functions.h
benchmark/Surface_mesh/: .generate_surface_mesh_sphere.cpp.swp  .surface_mesh_an_implicit_function.cpp.swp  generate_surface_mesh_false_knot.cpp  generate_surface_mesh_heart.cpp  generate_surface_mesh_klein.cpp  generate_surface_mesh_knot1.cpp  generate_surface_mesh_sphere.cpp  generate_surface_mesh_torus.cpp
benchmark/Surface_mesh/octave/: readFile.m
include/CGAL/: point_generators_2.h  point_generators_3 _vectors.h~  point_generators_3.h  point_generators_3.h~
